compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__keyword_label_name.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 532
expression: "pub type Thing {\n  Thing(in: Int, class: Nil)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub type Thing {
  Thing(in: Int, class: Nil)
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Thing extends $CustomType {
  constructor(in$, class$) {
    super();
    this.in = in$;
    this.class = class$;
  }
}
export const Thing$Thing = (in$, class$) => new Thing(in$, class$);
export const Thing$isThing = (value) => value instanceof Thing;
export const Thing$Thing$in = (value) => value.in;
export const Thing$Thing$0 = (value) => value.in;
export const Thing$Thing$class = (value) => value.class;
export const Thing$Thing$1 = (value) => value.class;
