compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__nested_pattern_with_labels.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 300
expression: "pub type Box(x) { Box(a: Int, b: x) }\npub fn go(x) {\n  case x {\n    Box(a: _, b: Box(a: a, b: b)) -> a + b\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub type Box(x) { Box(a: Int, b: x) }
pub fn go(x) {
  case x {
    Box(a: _, b: Box(a: a, b: b)) -> a + b
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Box extends $CustomType {
  constructor(a, b) {
    super();
    this.a = a;
    this.b = b;
  }
}
export const Box$Box = (a, b) => new Box(a, b);
export const Box$isBox = (value) => value instanceof Box;
export const Box$Box$a = (value) => value.a;
export const Box$Box$0 = (value) => value.a;
export const Box$Box$b = (value) => value.b;
export const Box$Box$1 = (value) => value.b;

export function go(x) {
  let a = x.b.a;
  let b = x.b.b;
  return a + b;
}
